<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/radio_group_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text_title"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <CheckBox
        android:id="@+id/perimeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perimeter_text"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />
    <CheckBox
        android:id="@+id/square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/square_text"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dbeceb"
        android:padding="15dp"
        ><TextView
        android:id="@+id/checkbox_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_group_title_text"
        android:textStyle="bold"
        android:textSize="20sp"
        />
        <RadioButton
            android:id="@+id/rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rectangle_text"
            />
        <RadioButton
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle_text"
            />
    </RadioGroup>
    <Button
        android:id="@+id/get_formula_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_formula_button_text"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>